sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: type int
var m: int = 0;
       ^AlgCocktailSort2:5: error: not found: type int
var l: int = 0;
       ^